misc/k8s-nxrm3-pg.yaml
# NOTE: Copy the license file under _SHARE_DIR.
#       Do not forget to configure Ingress.
#       To recreate, delete the deployment.
#export _DB_USER="nxrm3" _DB_PWD="nxrm3" _JDBC_URL="jdbc\:postgresql\://192.168.52.31\:5432/nxrm3" _SHARE_DIR="/var/tmp/share/sonatype/k8s-nxrm3" # permission
#kubectl apply --namespace=sonatype -f <(eval "echo \"_1_cat ./k8s-nxrm3-pg.yaml_2_\"")  # Replace _1_ with a dollar sign + open brace, _2_ with close brace
apiVersion: v1
kind: Service
metadata:
  name: nxrm3-service
  labels:
    app: nxrm3
spec:
  type: NodePort
  selector:
    app: nxrm3
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nxrm3-deployment
  labels:
    app: nxrm3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nxrm3
  template:
    metadata:
      labels:
        app: nxrm3
    spec:
      # TODO: Do I need to use initContainers to change owner of /nexus-data and serviceAccountName?
      containers:
        - name: nxrm3-pod
          image: sonatype/nexus3:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data-volume
              mountPath: /nexus-data
      volumes:
        - name: nexus-data-volume
          hostPath:
            path: ${_SHARE_DIR}
            type: DirectoryOrCreate
