misc/ingress-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: grafana-ingress
  namespace: ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            pathType: Prefix
            path: /
