misc/k8s-nexus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: default
spec:
  rules:
    - host: nxrm3-k8s.standalone.localdomain
      http:
        paths:
          - backend:
              service:
                # TODO: Need to make sure the service name is correct
                name: nxrm3-nexus-repository-manager
                port:
                  number: 8081
            pathType: Prefix
            path: /
    - host: docker-k8s.standalone.localdomain
      http:
        paths:
          - backend:
              service:
                # TODO: Need to make sure the service name is correct
                name: nxrm3-nexus-repository-manager
                port:
                  number: 5000
            pathType: Prefix
            path: /
    - host: nxiq-k8s.standalone.localdomain
      http:
        paths:
          - backend:
              service:
                name: nxiq-nexus-iq-server
                port:
                  number: 8070
            pathType: Prefix
            path: /
    # TODO: do i need to expose this?
    - host: nxiq-admin-k8s.standalone.localdomain
      http:
        paths:
          - backend:
              service:
                name: nxiq-nexus-iq-server
                port:
                  number: 8071
            pathType: Prefix
            path: /
